[gd_scene load_steps=6 format=3 uid="uid://djynltk46jt3r"]

[ext_resource type="Script" uid="uid://dthpwyb7vv1ox" path="res://Escenas nuevas/main_menu.gd" id="1_81dio"]
[ext_resource type="PackedScene" uid="uid://d1f8mukabg4jg" path="res://Main Menu.tscn" id="1_hrms7"]
[ext_resource type="Theme" uid="uid://63np5755uwmg" path="res://Escenas nuevas/UI.tres" id="2_ou7mt"]
[ext_resource type="FontFile" uid="uid://cr01irqo212gm" path="res://Fonts/Geo-Regular.ttf" id="3_jfsgn"]
[ext_resource type="PackedScene" uid="uid://bctys1756xnoi" path="res://Escenas nuevas/settings_box.tscn" id="4_jfsgn"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_81dio")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -20.0
offset_right = 54.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="VBoxContainer" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="Play" type="Button" parent="BoxContainer/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_ou7mt")
theme_override_fonts/font = ExtResource("3_jfsgn")
text = "Play"

[node name="Settings" type="Button" parent="BoxContainer/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_ou7mt")
theme_override_fonts/font = ExtResource("3_jfsgn")
text = "Settings"

[node name="SettingsBox" parent="." instance=ExtResource("4_jfsgn")]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 576.0
offset_top = 328.0
offset_right = 576.0
offset_bottom = 454.0

[node name="Node3D" parent="." instance=ExtResource("1_hrms7")]

[connection signal="pressed" from="BoxContainer/MainMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="BoxContainer/MainMenu/Settings" to="." method="_on_settings_pressed"]
